...
    favorite: true,
  },
  {
    id: 'shiny-gigantamax-charizard',
    cp: 2626,
    dexNumber: 6,
    name: 'Shiny Gigantamax Charizard',
    imagePath: '/images/shiny_gigantamax/shiny_gigantamax_6.png',
    typeIconPaths: ['/images/types/fire.png', '/images/types/flying.png'],
    favorite: true,
    maxKind: 'gigantamax',
  },
  {
    id: 'shiny-mewtwo',
    cp: 3978,
    dexNumber: 150,
    name: 'Shiny Mewtwo',
    imagePath: '/images/shiny/shiny_pokemon_150.png',
    typeIconPaths: ['/images/types/psychic.png'],
    favorite: true,
  },
  {
    id: 'shiny-suicune',
...
